# lambda-deploy-spikes

./: .gitignore  README.md
deploy/: README.md
deploy/raw-lambda-whl-package-image/: README.md
deploy/raw-lambda-whl-package-image/src/: setup.cfg
deploy/raw-lambda-whl-package-zip/src/: requirements.txt  setup.cfg
deploy/raw-lambda-with-dep-image/: README.md
deploy/raw-lambda-with-dep-image/src/: Dockerfile  lambda_function.py
raw-lambda-no-dep-zip/: README.md
raw-lambda-no-dep-zip/src/: lambda_function.py  test-event.json
raw-lambda-whl-package-image/: README.md
raw-lambda-whl-package-image/src/: Dockerfile  ecr_repository_policy.json  requirements.txt
raw-lambda-whl-package-image/src/functions/: poster.py
raw-lambda-with-dep-image/: README.md
raw-lambda-with-dep-zip/: README.md
raw-lambda-with-dep-zip/src/: lambda_function.py
sst-lambda-no-dep/: README.md  package-lock.json  package.json  sst.json
sst-lambda-no-dep/test/: MyStack.test.js
sst-lambda-whl-package/: package-lock.json  package.json  sst.json
sst-lambda-whl-package/lib/: MyStack.js
sst-lambda-whl-package/src/: requirements.txt  setup.cfg
sst-lambda-whl-package/src/handlers/: getter.py  poster.py
sst-lambda-whl-package/src/libs/dates_magic/: pretty_datetime.py
sst-lambda-whl-package/src/libs/sst_lambda_wheel_libs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sst-lambda-with-dep/: package-lock.json  package.json  sst.json
sst-lambda-with-dep/lib/: MyStack.js  index.js
sst-lambda-with-dep/src/: dates_magic.py  lambda.py
(+9 files in other folders)
