[metadata]
name = sst_lambda_wheel_libs
version = 0.0.1
author = Luke Wyman
author_email = lukewyman@company.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukewyman/lambda-deploy-spikes
project_urls =
    Bug Tracker = https://github.com/lukewyman/lambda-deploy-spikes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = libs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = libs